# klashibot

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  PROJECT_CLEANUP_REPORT.md  README.md  api_server.py  bridge.py  docker-compose.yml  launch_headless.py  launcher.py  main.py  models.py  nginx.conf  package-lock.json  package.json  playwright.config.js  redis.conf  requirements.txt  start_docker.bat  start_full_stack.bat  supervisor.py  trading_engine.py  tts_service.py  websocket_bridge.py
.claude/: settings.local.json
ai-agent/: LAUNCH_INSTRUCTIONS.md  README.md  STATUS.md  agent.py  pyproject.toml  requirements.txt  start_agent.bat  system_prompt.md  test_setup.py
archive/: dashboard.html
brain/: recursive_learner.py
config/: mcp_config.json  settings.example.yaml
dev_suite/: README.md  conftest.py  run_suite.py
docs/: AI_AGENT_SETUP.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT.md  DASHBOARD_REDESIGN.md  IMPLEMENTATION_PLAN.md  MCP_ARCHITECTURE.md  OPTIMIZATION_SUMMARY.md  PAPER_TRADING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  SETUP.md  START_DASHBOARD.md  START_SYSTEM.md  STRUCTURE.md  TRADING_OPTIMIZATION.md  TTS_IMPLEMENTATION.md  TTS_LATENCY_IMPROVEMENTS.md  TTS_VOICE_SETUP.md
frontend/: .eslintignore  .eslintrc.json  BRAND_GUIDELINES.md  README.md  UI_AUDIT_REPORT.md  dist_index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
k8s/: worker-deployment.yaml
mcp-server-browser/: server.py
(+157 files in other folders)
